removed screenshot scrollbar and fixed formatting

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -51,7 +51,7 @@ body{
   font-size: 16px;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 16px;
   text-decoration: none;
   height: 100%;
 }
@@ -215,8 +215,8 @@ p.userNameLink{
 }
 
 .game-header-container img{
-  width: 70%;
-  height: 95%;
+  width: 185px;
+  height: 220px;
 }
 
 .game-header-container div.game-info{
@@ -247,21 +247,32 @@ p.userNameLink{
   display: flex;
   flex-flow: row nowrap;
   height: 200px;
-  width: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.game-media-container::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
 
 .screenshot-container{
-  height: 95%;
-  width: 266px;
-  margin: 5px 10px;
+  height: 190px;
+  min-width: 266px;
+  max-width: 266px;
+  margin: 8px 5px 8px 5px;
 }
 
 .screenshot-container img{
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: fill;
+  overflow: hidden;
+}
+
+.screenshot-container img:hover{
+  animation: image-zoom 2s ease;
 }
 
 .game-detail-flex-container{
@@ -355,15 +366,17 @@ input#password{
   font-weight: bold;
 }
 
+.small-text{
+  font-size: 8px;
+}
+
 .centered{
   text-align: center;
 }
 
 .footer{
   font-size: 8px;
-  position: absolute;
-  right: 4px;
-  bottom: 4px;
+  position: relative;
 }
 
 .red{
